welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:16: error: not found: value solEstVert
	return solEstVert;
               ^